# note

./: .gitignore  Makefile  REFERENCES.md  pyproject.toml  settings.json
.devcontainer/: devcontainer.json
docs/: conf.py  index.rst
docs/aws/: amazon_api_gateway.rst  amazon_ec2.rst  amazon_ecs.rst  aws_batch.rst  aws_codebuild.rst  aws_lambda.rst  aws_notes.rst  cdk.rst
docs/web/: oauth.rst
