[tool.poetry]
name = "note"
version = "0.1.0"
description = ""
authors = ["gsy0911 <yoshiki0911@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Jinja2 = "3.0.3"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.1"
sphinx = "^4.0.0"
myst-parser = "^0.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
